force-app/main/default/objects/LyndaTest__c/LyndaTest__c.object-meta.xml
<CustomObject>
    <description>Test Object</description>
    <label>LyndaTest</label>
    <nameField>
        <label>LyndaTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LyndaTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>