force-app/main/default/objects/LyndaTest__c/fields/ControllingField__c.field-meta.xml
<CustomField>
    <fullName>ControllingField__c</fullName>
    <label>Palette - ControllingField</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>