force-app/main/default/objects/LyndaTest__c/fields/DependentField1__c.field-meta.xml
<CustomField>
    <fullName>DependentField1__c</fullName>
    <label>Color - DependentField1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ControllingField__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>