force-app/main/default/objects/LyndaTest__c/fields/DependentField2__c.field-meta.xml
<CustomField>
    <fullName>DependentField2__c</fullName>
    <inlineHelpText>Fruit of the color</inlineHelpText>
    <label>Fruit - DependentField2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DependentField1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Banana</fullName>
            </value>
            <value>
                <fullName>Blueberry</fullName>
            </value>
            <value>
                <fullName>Cherry</fullName>
            </value>
            <value>
                <fullName>Grape</fullName>
            </value>
            <value>
                <fullName>Kiwi</fullName>
            </value>
            <value>
                <fullName>Lime</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Peach</fullName>
            </value>
            <value>
                <fullName>Raspberry</fullName>
            </value>
            <value>
                <fullName>Strawberry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>