force-app/main/default/objects/LyndaTest__c/fields/DependentField3__c.field-meta.xml
<CustomField>
    <fullName>DependentField3__c</fullName>
    <inlineHelpText>Flowers in the color</inlineHelpText>
    <label>Floral - DependentField3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DependentField1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ButterflyBush</fullName>
            </value>
            <value>
                <fullName>Carnation</fullName>
            </value>
            <value>
                <fullName>Daffodil</fullName>
            </value>
            <value>
                <fullName>Lavender</fullName>
            </value>
            <value>
                <fullName>Nasturtium</fullName>
            </value>
            <value>
                <fullName>Rose</fullName>
            </value>
            <value>
                <fullName>Tulip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>