force-app/main/default/objects/LyndaTest__c/recordTypes/RecordType2.recordType-meta.xml
<RecordType>
    <fullName>RecordType2</fullName>
    <active>true</active>
    <label>RecordType2</label>
</RecordType>